<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondosdisney"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulomascota"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombremascota"
        android:layout_width="297dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/caja_rectangular"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/hintnombre"
        android:inputType="textPersonName"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtEdadmascota"
        android:layout_width="264dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/caja_rectangular"
        android:drawablePadding="7dp"
        android:ems="10"
        android:hint="@string/hintedad"
        android:inputType="textPersonName"
        android:padding="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombremascota" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="153dp"
        android:layout_height="175dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rdbPerro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameperro"
            android:checked="true"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rdbGato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/namegato"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rdbConejo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conejo"
            android:textSize="16dp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/chkDis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/vac1"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/chkPar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="28dp"
        android:text="@string/vac2"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/chkRab" />

    <CheckBox
        android:id="@+id/chkRab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/vac3"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/chkDis" />

    <CheckBox
        android:id="@+id/chkLep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/vac5"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/chkPar" />

    <CheckBox
        android:id="@+id/chkAde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/vac4"
        app:layout_constraintStart_toEndOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/chkLep" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/enviar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/tipomascota"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEdadmascota" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="112dp"
        android:text="@string/tipovacuna"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEdadmascota" />
</androidx.constraintlayout.widget.ConstraintLayout>